chore: ensuring security in links with 'target="_blank"'

--- a/src/components/GitHubProj.astro
+++ b/src/components/GitHubProj.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 const organization: string = "https://github.com/An-Ordinary-Software-Engineering";
 ---
 
-<a href={organization} rel="external" target="_blank"
+<a href={organization} rel="external noreferrer noopener" target="_blank"
     class="ml-2 p-1 transition-all ease-linear hover:bg-w-aose hover:scale-110 rounded-lg"
 >
     <Icon
