feat: create utility components on '@components/utils/'

--- a/src/components/AuthorInfo.astro
+++ b/src/components/AuthorInfo.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import { type Author } from "@scripts/types/Author";
+import Show from "./utils/Show.astro";
 import Title from "./Title.astro";
 import Presentation from "./Presentation.astro";
 import MediaList from "./MediaList.astro";
@@ -29,13 +30,17 @@ const { Content } = await description?.render() ?? {};
     />
     <section class="flex flex-col w-[50%]">
         <Title>{author.name}</Title>
-        {media && <MediaList media={media} />}
-        {stacks && <StackList stacks={stacks} />}
+        <Show when={media}>
+            <MediaList media={media!} />
+        </Show>
+        <Show when={stacks}>
+            <StackList stacks={stacks!} />
+        </Show>
     </section>
     <span class="border-[1px] border-[#f1f1f1] mx-5"></span>
-    { Content &&
+    <Show when={Content}>
         <Presentation who={author.name}>
             <Content />
         </Presentation>
-    }
+    </Show>
 </article>
