refactor: segrate UI section components in '@components/sections/'

--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
 import aoseImg from "@assets/aose_white.svg";
-import Anchor from "./Anchor.astro";
+import Anchor from "@components/Anchor.astro";
 import { currentYear } from "@content/schemas";
 
 interface Props {
