--- a/src/components/sections/NavBar.astro
+++ b/src/components/sections/NavBar.astro
@@ -1,5 +1,5 @@
 ---
-import Link from "./Link.astro";;
+import Link from "@components/Link.astro";;
 ---
 
 <nav class="flex gap-4 w-fit m-4 items-center">
