--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -5,7 +5,7 @@ import aoseImg from "@assets/aose_white.svg";
 import Anchor from "@components/Anchor.astro";
 import { currentYear } from "@content/schemas";
 
-interface Props {
+interface Data {
     year: number | null;
     registry: string;
     source: string;
@@ -13,7 +13,7 @@ interface Props {
 }
 
 const content = await getEntry("brands", "aose");
-const data: Props = content!.data;
+const data: Data = content!.data;
 
 const year = data.year 
     ? data.year 
