--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import "@styles/globals.css";
-import Header from "@components/Header.astro";
-import Footer from "@components/Footer.astro";
+import Header from "@components/sections/Header.astro";
+import Footer from "@components/sections/Footer.astro";
 
 interface Props {
 	title: string;
