style+refactor: start to apply responsivity for pages

--- a/src/layouts/CardLayout.astro
+++ b/src/layouts/CardLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./BaseLayout.astro";
 ---
 
 <BaseLayout title="Posts"
-    className="grid grid-cols-3 justify-items-center px-24 mb-3 gap-y-12"
+    className="sm:columns-1 lg:columns-3 px-28 mb-3"
 >
     <slot />
 </BaseLayout>
